Fix responsive issue on mobile

--- a/src/features/card/CardRegistrationForm.css
+++ b/src/features/card/CardRegistrationForm.css
@@ -28,3 +28,18 @@
   align-items: center;
   min-width: 400px;
 }
+
+@media only screen and (max-width: 600px) {
+  .card-info {
+    min-width: initial;
+    width: -moz-calc(100% - 20px);
+    /* WebKit */
+    width: -webkit-calc(100% - 20px);
+    /* Opera */
+    width: -o-calc(100% - 20px);
+    /* Standard */
+    width: calc(100% - 20px);
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
